changed history text button

--- a/src/views/wikidetail.ejs
+++ b/src/views/wikidetail.ejs
@@ -37,7 +37,7 @@
                         <td><%= wiki.pages[i].optionalMessage %></td>
                         <td>
                             <a href="/pageedit/<%=wiki.pages[i]._id%>" class="btn btn-info">Edit</a>
-                            <a href="/pagehistory/<%=wiki.pages[i]._id%>" class="btn btn-danger">View history</a>
+                            <a href="/pagehistory/<%=wiki.pages[i]._id%>" class="btn btn-danger">History</a>
                         </td>
                     </tr>
                     <% } %>
