--- a/src/views/pageedit.ejs
+++ b/src/views/pageedit.ejs
@@ -27,7 +27,7 @@
                         </div>
                         <div class="form-group">
                             <label for="">Edition message (Optional)</label>
-                            <input class="form-control" type="text" name="optionalMessage" value="<%=page.optionalMessage%>"
+                            <input class="form-control" type="text" name="optionalMessage" value=""
                                 placeholder="Optional edit message">
                         </div>
 
@@ -43,6 +43,21 @@
    
 </div>
 
-<pre><%= page %></pre>
+<!-- MONGO DB JSON -->
+<div class="container" style="margin-top: 4rem;">
+    <hr>
+    <div class="row justify-content-md-center mb-4">
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header">
+                    <label>Data from Mongo DB:</label>
+                </div>
+                <div class="card-body">
+                    <pre><%= page %></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <%-  include  ('partials/_footer');  -%>
