Added client validations

--- a/src/views/pageedit.ejs
+++ b/src/views/pageedit.ejs
@@ -14,16 +14,16 @@
                         </div>
                         <div class="form-group">
                             <label for="">Title</label>
-                            <input class="form-control" type="text" name="title" value="<%=page.title%>" placeholder="Title">
+                            <input required class="form-control" type="text" name="title" value="<%=page.title%>" placeholder="Title">
                         </div>
                         <div class="form-group">
                             <label for="">Creator username</label>
-                            <input class="form-control" type="text" name="creatorUsername" value="<%=page.creatorUsername%>"
+                            <input required class="form-control" type="text" name="creatorUsername" value="<%=page.creatorUsername%>"
                                 placeholder="Creator username">
                         </div>
                         <div class="form-group">
                             <label for="">Content</label>
-                            <textarea class="form-control" name="content" placeholder="Content"><%=page.content%></textarea>
+                            <textarea required class="form-control" name="content" placeholder="Content"><%=page.content%></textarea>
                         </div>
                         <div class="form-group">
                             <label for="">Edition message (Optional)</label>
