--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
                         <div class="form-group">
                             <label>Entry your repository id, in prod environment this field will be
                                 auto-complete.</label>
-                            <input class="form-control" type="text" name="repositoryId" value=""
+                            <input required class="form-control" type="text" name="repositoryId" value=""
                                 placeholder="Repository id">
                         </div>
 
