--- a/src/views/wikidetail.ejs
+++ b/src/views/wikidetail.ejs
@@ -70,16 +70,16 @@
                         </div>
                         <div class="form-group">
                             <label for="">Title</label>
-                            <input class="form-control" type="text" name="title" value="" placeholder="Title">
+                            <input required class="form-control" type="text" name="title" value="" placeholder="Title">
                         </div>
                         <div class="form-group">
                             <label for="">Creator</label>
-                            <input class="form-control" type="text" name="creatorUsername" value=""
+                            <input required class="form-control" type="text" name="creatorUsername" value=""
                                 placeholder="Creator username">
                         </div>
                         <div class="form-group">
                             <label for="">Content</label>
-                            <textarea class="form-control" name="content" placeholder="Markdown text"></textarea>
+                            <textarea required class="form-control" name="content" placeholder="Markdown text"></textarea>
                         </div>
 
                         <button type="submit" class="btn btn-primary btn-block">
